fix flex wrap for smaller screens

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -130,6 +130,7 @@ button {
     justify-content: center;   
     margin-top: 2rem;
     margin-bottom: 1rem;
+    flex-wrap: wrap;
 }
 
 .clear-button {
